# matrix-embed

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  flake.nix
.github/workflows/: docker.yml
nix/: module.nix
src/: activitypub.rs  cas.rs  command.rs  config.rs  db.rs  extract.rs  handler.rs  key_sharing.rs  main.rs  media.rs  metadata.rs  processing.rs  tracker.rs
tests/data/: tweet.html
