[package]
name = "matrix-embed"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = { version = "0.16", features = ["e2e-encryption", "sqlite", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["stream", "json", "rustls", "socks"], default-features = false }
scraper = "0.25"
url = "2.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
mime_guess = "2.0"
futures-util = "0.3"
tempfile = "3.25"
bytes = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
blurhash = "0.2"
base64 = "0.22"
serde_json = "1.0"
html-escape = "0.2"
regex = "1.12.3"
infer = "0.19.0"

[dev-dependencies]
wiremock = "0.6.5"
