[package]
name = "matrix-embed"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", branch = "main", features = ["e2e-encryption", "sqlite", "markdown", "testing"], default-features = false }
matrix-sdk-base = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", branch = "main", features = ["e2e-encryption"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["stream", "json", "rustls", "socks"], default-features = false }
scraper = "0.25"
url = "2.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
mime_guess = "2.0"
futures-util = "0.3"
tempfile = "3.27"
bytes = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
blurhash = "0.2"
base64 = "0.22"
serde_json = "1.0"
html-escape = "0.2"
regex = "1.12.3"
infer = "0.19.0"
rusqlite = "0.37"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
wiremock = "0.6.5"
